Revise CMakeLists.txt files
It can build but does not work

--- a/src/3rdparty/opennurbs/opennurbs/CMakeLists.txt
+++ b/src/3rdparty/opennurbs/opennurbs/CMakeLists.txt
@@ -130,16 +130,6 @@ add_library(opennurbs SHARED
     ${RC}
 )
 
-if (CMAKE_BUILD_TYPE STREQUAL "Release")
-    set_target_properties(opennurbs PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ../../../../release)
-    set_target_properties(opennurbs PROPERTIES LIBRARY_OUTPUT_DIRECTORY ../../../../release)
-    target_link_libraries(opennurbs PUBLIC -L${CMAKE_CURRENT_SOURCE_DIR}/../../../../release)
-else()
-    set_target_properties(opennurbs PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ../../../../debug)
-    set_target_properties(opennurbs PROPERTIES LIBRARY_OUTPUT_DIRECTORY ../../../../debug)
-    target_link_libraries(opennurbs PUBLIC -L${CMAKE_CURRENT_SOURCE_DIR}/../../../../debug)
-endif()
-
 target_link_libraries(opennurbs PUBLIC
     zlib
 )
@@ -151,6 +141,7 @@ if(WIN32)
     )
 
     target_link_libraries(opennurbs PUBLIC
+        Rpcrt4
         gdi32
         user32
     )
