--- a/src/3rdparty/opennurbs/zlib/CMakeLists.txt
+++ b/src/3rdparty/opennurbs/zlib/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 project(zlib VERSION 1.0 LANGUAGES C)
 
-add_library(zlib SHARED
+add_library(zlib STATIC
     adler32.c
     compress.c
     crc32.c crc32.h
@@ -17,16 +17,6 @@ add_library(zlib SHARED
     zlib.h
     zutil.c zutil.h
 )
-
-if (CMAKE_BUILD_TYPE STREQUAL "Release")
-    set_target_properties(zlib PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ../../../../release)
-    set_target_properties(zlib PROPERTIES LIBRARY_OUTPUT_DIRECTORY ../../../../release)
-    target_link_libraries(zlib PUBLIC -L${CMAKE_CURRENT_SOURCE_DIR}/../../../../release)
-else()
-    set_target_properties(zlib PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ../../../../debug)
-    set_target_properties(zlib PROPERTIES LIBRARY_OUTPUT_DIRECTORY ../../../../debug)
-    target_link_libraries(zlib PUBLIC -L${CMAKE_CURRENT_SOURCE_DIR}/../../../../debug)
-endif()
 
 if(CMAKE_BUILD_TYPE STREQUAL Release)
     target_compile_definitions(zlib PRIVATE
