--- a/src/customwidgets/CMakeLists.txt
+++ b/src/customwidgets/CMakeLists.txt
@@ -1,22 +1,9 @@
-cmake_minimum_required(VERSION 3.16)
-project(qcadcustomwidgets VERSION 1.0 LANGUAGES CXX)
-
-include(../../CMakeInclude.txt)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-find_package(${QT_VER} REQUIRED COMPONENTS Core Widgets Concurrent Gui Network OpenGL Sql Svg Xml PrintSupport Qml)
-qt_standard_project_setup()
+#
+#
+#
 
 if(WIN32)
     set(RC customwidgets.rc)
-endif()
-
-if (CMAKE_BUILD_TYPE STREQUAL "Release")
-    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../release)
-else()
-    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../debug)
 endif()
 
 add_library(qcadcustomwidgets SHARED
@@ -48,8 +35,9 @@ target_compile_definitions(qcadcustomwidgets PRIVATE
     QCAD_DLL
 )
 
-set_target_properties(qcadcustomwidgets PROPERTIES LIBRARY_OUTPUT_DIRECTORY ../../plugins/designer)
-set_target_properties(qcadcustomwidgets PROPERTIES RUNTIME_OUTPUT_DIRECTORY ../../plugins/designer)
+set_target_properties(qcaddxf PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
+set_target_properties(qcaddxf PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
+set_target_properties(qcaddxf PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
 
 target_link_libraries(qcadcustomwidgets PRIVATE
     # Remove: L${CMAKE_CURRENT_SOURCE_DIR}/
