--- a/src/io/dxf/CMakeLists.txt
+++ b/src/io/dxf/CMakeLists.txt
@@ -1,20 +1,9 @@
-cmake_minimum_required(VERSION 3.16)
-project(qcaddxf VERSION 1.0 LANGUAGES CXX)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-find_package(${QT_VER} REQUIRED COMPONENTS Core Widgets Concurrent Gui Network OpenGL Sql Svg Xml PrintSupport Qml)
-qt_standard_project_setup()
+#
+#
+#
 
 if(WIN32)
     set(RC dxf.rc)
-endif()
-
-if (CMAKE_BUILD_TYPE STREQUAL "Release")
-    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../release)
-else()
-    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../debug)
 endif()
 
 add_library(qcaddxf SHARED
@@ -40,9 +29,9 @@ target_compile_definitions(qcaddxf PRIVATE
     QCAD_DLL
 )
 
-set_target_properties(qcaddxf PROPERTIES LIBRARY_OUTPUT_DIRECTORY ../../../plugins)
-set_target_properties(qcaddxf PROPERTIES RUNTIME_OUTPUT_DIRECTORY ../../../plugins)
-set_target_properties(qcaddxf PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ../../../plugins)
+set_target_properties(qcaddxf PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
+set_target_properties(qcaddxf PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
+set_target_properties(qcaddxf PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
 
 target_link_libraries(qcaddxf PRIVATE
     Qt::Core
