--- a/src/scripts/CMakeLists.txt
+++ b/src/scripts/CMakeLists.txt
@@ -1,13 +1,8 @@
-cmake_minimum_required(VERSION 3.16)
-project(qcadscripts VERSION 1.0 LANGUAGES CXX)
+#
+#
+#
 
-include(../../CMakeInclude.txt)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-find_package(${QT_VER} REQUIRED COMPONENTS Core Widgets Concurrent Gui Network OpenGL Sql Svg Xml PrintSupport Qml)
-qt_standard_project_setup()
 
 if(rtest)
     qt_add_resources(SOURCES scripts.qrc)
@@ -17,12 +12,6 @@ endif()
 
 if(WIN32)
     set(RC scripts.rc)
-endif()
-
-if (CMAKE_BUILD_TYPE STREQUAL "Release")
-    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../release)
-else()
-    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../debug)
 endif()
 
 add_library(qcadscripts SHARED
@@ -39,9 +28,9 @@ target_compile_definitions(qcadscripts PRIVATE
     QCAD_DLL
 )
 
-set_target_properties(qcadscripts PROPERTIES LIBRARY_OUTPUT_DIRECTORY ../../plugins)
-set_target_properties(qcadscripts PROPERTIES RUNTIME_OUTPUT_DIRECTORY ../../plugins)
-set_target_properties(qcadscripts PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ../../plugins)
+set_target_properties(qcaddxf PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
+set_target_properties(qcaddxf PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
+set_target_properties(qcaddxf PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
 
 target_link_libraries(qcadscripts PRIVATE
     Qt::Core
